[gd_scene load_steps=15 format=3 uid="uid://drqjaswvgs5u3"]

[ext_resource type="Script" uid="uid://defkhc7ih55sh" path="res://game/stunts/combo_meter/combo_meter.gd" id="1_mkgrf"]
[ext_resource type="Shader" uid="uid://bqmxdq8kcpvw8" path="res://game/shaders/fire-number.gdshader" id="2_cd2f0"]
[ext_resource type="Texture2D" uid="uid://lhueon4ofbj2" path="res://game/stunts/combo_meter/red-btn.png" id="3_m3kmn"]
[ext_resource type="Theme" uid="uid://cvdgn5uuf5t4w" path="res://game/theme/game_theme.tres" id="4_uybfr"]
[ext_resource type="Texture2D" uid="uid://wm7qo0clndg" path="res://game/stunts/combo_meter/blue-btn.png" id="5_3een6"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6gauc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rlsuy"]
height = 1024
noise = SubResource("FastNoiseLite_6gauc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kqlb2"]
shader = ExtResource("2_cd2f0")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_rlsuy")
shader_parameter/bottom_color = Color(0.984314, 0.992157, 0.933333, 1)
shader_parameter/middle_color = Color(0.972549, 0.47451, 0.258824, 1)
shader_parameter/top_color = Color(1, 0.298039, 0.25098, 1)
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(-0.2, 1.715)
shader_parameter/fire_aperture = 2.063

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wiveq"]

[sub_resource type="LabelSettings" id="LabelSettings_2axpp"]
font_size = 60
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.364706)
shadow_offset = Vector2(4, 3)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lhdva"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_y3ejj"]
height = 1024
noise = SubResource("FastNoiseLite_lhdva")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h7dcs"]
shader = ExtResource("2_cd2f0")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_y3ejj")
shader_parameter/bottom_color = Color(0.984314, 0.992157, 0.933333, 1)
shader_parameter/middle_color = Color(0, 0.996078, 1, 1)
shader_parameter/top_color = Color(0, 0.576471, 0.996078, 1)
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(-0.2, 1.715)
shader_parameter/fire_aperture = 0.799

[sub_resource type="LabelSettings" id="LabelSettings_kcq4r"]
font_size = 60
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.313726)
shadow_offset = Vector2(-4, 3)

[node name="ComboMeter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkgrf")

[node name="red" type="Node2D" parent="."]
position = Vector2(-40.9999, 4.00006)
scale = Vector2(0.357099, 0.355263)

[node name="RedFire" type="TextureRect" parent="red"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kqlb2")
offset_left = -104.0
offset_top = -569.585
offset_right = 106.0
offset_bottom = -37.905
texture = SubResource("PlaceholderTexture2D_wiveq")

[node name="Red-btn" type="Sprite2D" parent="red"]
texture = ExtResource("3_m3kmn")

[node name="RedLabel" type="Label" parent="red"]
unique_name_in_owner = true
offset_left = -64.4079
offset_top = -33.7779
offset_right = 62.5921
offset_bottom = 26.2221
theme = ExtResource("4_uybfr")
text = "24,000"
label_settings = SubResource("LabelSettings_2axpp")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="blue" type="Node2D" parent="."]
position = Vector2(40.9999, 4.99994)
scale = Vector2(0.359649, 0.359649)

[node name="BlueFire" type="TextureRect" parent="blue"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_h7dcs")
offset_left = -106.0
offset_top = -569.585
offset_right = 106.0
offset_bottom = -37.905
texture = SubResource("PlaceholderTexture2D_wiveq")

[node name="Blue-btn" type="Sprite2D" parent="blue"]
texture = ExtResource("5_3een6")

[node name="BlueLabel" type="Label" parent="blue"]
unique_name_in_owner = true
offset_left = -64.4079
offset_top = -33.7779
offset_right = 62.5921
offset_bottom = 26.2221
text = "15,000"
label_settings = SubResource("LabelSettings_kcq4r")
horizontal_alignment = 1
